tests/invalid/dict_pop_wrong_key_type/main.py
def run_case() -> None:
    d: dict[int, int] = {1: 10}
    v: int = d.pop("bad")


if __name__ == "__main__":
    run_case()
